# mkgpwa

./: .env.README.md  .env.example  .gitignore  BUILD_SCRIPTS.md  CHANGELOG.md  CRITICAL_FIX.md  DEPLOYMENT.md  DEPLOY_v1.4.12.md  FIX_CHUNK_ERROR.md  MIGRASI-WEB-00-OVERVIEW.md  MIGRASI-WEB-01-MASTER-DATA.md  MIGRASI-WEB-02-OPERATIONAL.md  MIGRASI-WEB-03-SCM.md  MIGRASI-WEB-04-SETTING.md  MIGRASI-WEB-05-OTHERS.md  MIGRASI-WEB-06-COMPONENTS.md  MIGRASI-WEB-07-API-INTEGRATION.md  MIGRASI-WEB-08-AUTHENTICATION.md  MIGRASI-WEB-09-UTILITIES.md  MIGRASI-WEB-README.md  OFFLINE_MODE_UPGRADE.md  PERMANENT_FIX_APPLIED.md  QUICK_START.md  README_BUILD.md  SYS_OPTIONS_USAGE_EXAMPLE.md  TESTING_ELECTRON.md  TROUBLESHOOTING_OFFLINE_MODE.md  build-electron.js  build-tauri.sh  cleanup-tauri.sh  clear-cache.sh  create-dmg-manual.sh  deploy.sh  dev-tauri.sh  ecosystem.config.js  electron-builder-notarize.js  entitlements.mac.plist.backup  force-rebuild.sh  generate-icons.js  generate-icons.sh  (+16 more)
doc/: BUILD_GUIDE.md  INDEX.md  README_UNINSTALL.md  petunjuk-build-tauri.md
docs/: DEPLOYMENT_QUICKSTART.md  SETUP_STEP_BY_STEP.md  TROUBLESHOOTING.md  USER_ACCESS_API.md  USER_GUIDE.md  prd-refactor-activity-equipment-plan.md  produksi-pit-circle-time-monitoring-prd.md  timesheet-reconcil-prd.md  timesheet-reconcil-todo.md  v_sparepart_used.json
electron/: env-loader.js  (+2 more)
src-tauri/: Cargo.toml  build.rs  next.config.js  package.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/public/assets/images/auth/: MiningAuthBackground.js
src-tauri/src/: lib.rs  main.rs  sync_service.rs
(+579 files in other folders)
